kubernetes/apps/base/nextcloud/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nextcloud.${cluster_domain}`)
      kind: Rule
      services:
        - name: nextcloud
          port: 19200
